src/test/resources/testData/annotation/IDEA_106515.hx
class <info descr="null">Test</info> {
  public static function <info descr="null">main</info>() {
    var <info descr="null">arr</info> = <error descr="Unresolved type">TArray</error>.foo();
  }
}